--- a/src/routes/layout.css
+++ b/src/routes/layout.css
@@ -1,1 +1,12 @@
 @import "tailwindcss";
+
+@utility container {
+  @apply mx-auto px-4;
+}
+
+@layer base {
+  button:not(:disabled),
+  [role="button"]:not(:disabled) {
+    @apply cursor-pointer;
+  }
+}
